{
  "manually": "手動選擇",
  "botQianFan": "千帆機器人",
  "darkModel": "深色模式",
  "normalModel": "普通模式",
  "followSystem": "跟隨系統",
  "followSystemTips": "啟用後，將跟隨系統打開或關閉深色模式",
  "on": "已開啟",
  "off": "已關閉",
  "you": "你",
  "setParam": "設置%s",
  "applyParam": "申請%s",
  "readAgreeParam": "已經閱讀並同意%s",
  "logoutNotice": "《註銷須知》",
  "cancelLogoutTitle": "是否終止註銷流程？",
  "cancelLogoutBody": "此賬號處於註銷後悔期，若登錄成功則視作終止註銷流程。如需繼續註銷，請在註銷申請提交後的15天內不要登錄IMBoy。",
  "buttonSave": "儲存",
  "buttonCancel": "取消",
  "buttonAccomplish": "完成",
  "buttonTakingPictures": "拍照",
  "buttonSelectFromAlbum": "從相簿選擇",
  "buttonSend": "發送",
  "login": "登錄",
  "signup": "註冊",
  "buttonLogout": "註銷",
  "buttonSetEmpty": "置空",
  "buttonConfirm": "確認",
  "buttonAdd": "新增",
  "buttonDelete": "刪除",
  "buttonClose": "關閉",
  "resendCode": "重新發送驗證碼",
  "buttonInviteCode": "邀請碼",
  "forgotPassword": "忘記密碼？",
  "recoverPassword": "找回密碼",
  "buttonBack": "返回",
  "buttonCopy": "複製",
  "buttonSubmit": "提交",
  "signInWith": "用 %s 登錄",
  "termOfServices": "服務條款",
  "selectedItems": "%s 個選定項目",
  "titleMine": "我的",
  "titleContact": "聯繫人",
  "titleMessage": "訊息",
  "verificationMessageSentByPeerIs": "對方發來的驗證消息為：%s",
  "tipDraft": "草稿",
  "tipTips": "小貼士",
  "tipSuccess": "操作成功！",
  "tipFailed": "操作失敗！",
  "pleaseInputParam": "請輸入%s",
  "paramFormatError": "%s格式不正確",
  "paramLogin": "%s登入",
  "mobileQuickLogin": "一鍵登入",
  "buttonContinue": "繼續",
  "tryAgainQ": "想再試一次嗎？",
  "notReceiveCoeQ": "沒有收到驗證碼？",
  "nextStep": "下一階段",
  "existingPassword": "現有密碼",
  "newPassword": "新密碼",
  "regionSearchTips": "按地區名稱或區域編碼搜尋",
  "licenseAgreement": "《軟體許可及服務協議》",
  "agreeContinue": "同意並繼續",
  "pinCodeFillTips": "請將方格填滿",
  "perMinuteOnce": "每分鐘只能請求一次",
  "paramAlreadyExist": "%s已經存在",
  "resendCodeSuccess": "已發送新郵件。",
  "recoverPasswordSuccess": "驗證碼發送成功",
  "recoverPasswordDesc": "",
  "recoverPasswordIntro": "不要感覺不好，這是常有的事。",
  "recoverCodePasswordDesc": "我們會將密碼恢復碼發送到您的郵箱。",
  "signupFormDesc": "請填寫此表格以完成註帳",
  "signupIntro": "確認碼已發送到您的郵箱，\n請輸入確認碼確認您的帳戶。",
  "confirmCodeError": "確認碼為空",
  "confirmCodeSuccess": "帳戶已確認。",
  "codeSentToParam": "驗證碼已發送到%s",
  "confirmRecoverSuccess": "密碼修改成功。",
  "tipConnectDesc": "無網路",
  "tipProvidersTitleFirst": "或用以下帳號登錄",
  "siginQ": "已經有帳號了？",
  "noSiginQ": "還沒有帳號？",
  "tipGreeting": "歡迎使用",
  "tipDeviceSpace": "占設備 %s‰ 存儲空間(%s)",
  "tipDeleteContact": "將聯繫人\"%s\"刪除，同時刪除與該聯繫人的聊天記錄",
  "tipEmptyChatPlaceholder": "這裡還沒有消息",
  "hintLoginAccount": "帳號/郵箱",
  "confirmCode": "確認碼",
  "password": "密碼",
  "retypePassword": "重新輸入密碼",
  "chatHoldDownTalk": "按住說話",
  "incomingCall": "%s呼入",
  "errorPassword": "密碼錯誤",
  "errorRetypePassword": "兩次輸入密碼不一致",
  "errorFailedToConnect": "連線到 %s 失敗",
  "errorNoValidFileOrUrl": "%s 不是有效的檔案或URL",
  "errorUnnecessaryParameter": "參數 %s 是多餘的",
  "errorUnnecessaryParameterPlural": "參數 %s 是多餘的",
  "errorNonexistentDirectory": "%s 不存在",
  "errorEmptyDirectory": "%s 是空的",
  "errorSame": "%s 和 %s 是一樣的",
  "errorInvalid": "%s 是無效的",
  "errorLengthBetween": "%s長度為%s-%s的任意字元",
  "errorRequired": "%s 是必須的",
  "errorInvalidJson": "%s 不是個有效的json檔案",
  "errorSpecialCharactersInKey": "key中包含不允許的特殊字元. \\n key: %s",
  "errorRequiredPath": "需要傳入檔案或路徑",
  "errorInvalidDart": "%s 不是有效的dart檔案",
  "errorInvalidFileOrDirectory": "%s 不是有效的檔案或目錄",
  "errorPackageNotFound": "依賴: %s 在 pub.dev 中沒有找到",
  "errorCliVersionNotFound": "沒有找到已安裝版本。",
  "errorUpdateCli": "升級 get_cli 錯誤",
  "errorFolderNotFound": "資料夾 %s 未找到",
  "errorFileNotFound": "在 %s 中沒有找到檔案",
  "errorAccessDenied": "對 %s 的存取被拒絕",
  "errorUnexpected": "發生意外錯誤",
  "errorNoPackageToRemove": "請輸入你想移除的 package 名稱",
  "errorHttpNotSupported": "不支援HTTP協議請求",
  "errorServerDown": "伺服器掛了",
  "errorInvalidRequest": "無效的請求",
  "errorRequestSyntax": "請求語法錯誤",
  "errorServerRefused": "伺服器拒絕執行",
  "errorFailedConnectServer": "無法連線伺服器",
  "errorRequestForbidden": "請求方法被禁止",
  "errorManyRequest": "請求過多",
  "errorInternalServer": "伺服器內部錯誤",
  "unsupportedFileType": "不支援的檔案類型",
  "noPermission": "沒有權限",
  "example": "例:",
  "warning": "警告:",
  "infoLoggedInOnAnotherDevice": "你的帳號已於%s在其他設備登錄",
  "upToWords": "最多%s個字",
  "numUnit": "%s個",
  "searchNoFound": "搜尋結果為空 :(",
  "allowSearchMe": "允許搜索我",
  "canNotAddYourselfFriend": "你不能添加自己為好友",
  "noData": "暫無資料",
  "avatar": "頭像",
  "noAvatar": "無頭像",
  "saveSuccess": "儲存成功",
  "networkException": "網路連線異常",
  "searchLocation": "搜尋地點",
  "nickname": "暱稱",
  "account": "帳號",
  "email": "郵箱",
  "mobile": "手機",
  "region": "地區",
  "selectedRegion": "已選地區",
  "uploading": "上傳中",
  "loading": "載入中",
  "openInBrowser": "在瀏覽器中打開",
  "sureOpenTheFile": "確定要打開檔案嗎？",
  "notInstallAnyMapApp": "您沒有安裝任何地圖APP哦",
  "reEdit": "重新編輯",
  "messageWasWithdrawn": "撤回了一條訊息",
  "youWithdrewAMessage": "你撤回了一條訊息",
  "personalCard": "個人名片",
  "unanswered": "未應答",
  "peerHasHungUp": "對方已掛斷",
  "cancelled": "已取消",
  "callDuration": "通話時長",
  "all": "全部",
  "revoke": "撤回",
  "forward": "轉發",
  "quote": "引用",
  "deleteForMe": "刪除我的訊息",
  "deleteForEveryone": "刪除所有人的訊息",
  "complaint": "投訴",
  "slideUpCancelSending": "手指上滑,取消發送",
  "releaseEnd": "鬆開結束",
  "speakingTooShort": "說話時間太短",
  "releaseFingerCancelSending": "鬆開手指,取消發送",
  "hangup": "掛斷",
  "loudspeaker": "擴音器",
  "microphone": "麥克風",
  "microphonePermissionNotObtained": "未獲取到麥克風權限",
  "rating": "評級",
  "great": "非常棒",
  "good": "很棒",
  "notBad": "還不錯",
  "needContinueWorkHard": "需要繼續加油",
  "tooBad": "太差了",
  "leaveYourSuggestions": "請留下您寶貴的意見和建議",
  "nearbyPeopleExplain": "附近的用戶可以查看你的個人資料並給你發送信息。這可能會幫助你找到新朋友，但也可能會引起過多的關注。你可以隨時停止分享你的個人資料。\n\n你的電話號碼將會被隱藏。",
  "appSqliteFileSizeExplain": "當前帳號本地生成的sqlite檔案大小；可清理所選聊天記錄里的圖片、視頻、和檔案，或者清空所選聊天記錄里的所有聊天信息。",
  "whatYourFeedback": "你的回饋是什麼?",
  "yourContactInformation": "你的聯繫方式",
  "yourFeel": "這讓你感覺如何?",
  "networkNotAvailable": "當前網絡不可用。",
  "pleaseCheckNetwork": "請檢查你的網絡設置。",
  "webpageLoading": "網頁加載中...",
  "failedRequestPleaseCheckNetwork": "發起請求失敗，請檢查網絡連接，或稍后重試",
  "feedback": "回饋建議",
  "feedbackContentRequired": "回饋內容不能為空",
  "feedbackSuccessMsg": "你的回饋問題我們已經收到了，會盡快處理！",
  "sendMsgRejected": "訊息已發出，但被對方拒收了。",
  "sendMsgNotFriendTips": "對方開啟了好友驗證，你還不是他（她）好友。請先發送好友驗證請求，對方驗證通過後，才能聊天。",
  "collected": "已收藏",
  "copied": "已複製",
  "operationFailedAgainLater": "操作失敗，請稍后重試",
  "setChatBackground": "設置當前聊天背景",
  "messageMute": "訊息免打擾",
  "topChat": "置頂聊天",
  "strongReminder": "強提醒",
  "searchChatRecord": "查找聊天記錄",
  "confirmDeleteChatRecord": "確定刪除聊天記錄嗎？",
  "chatSettings": "聊天設置",
  "chatSettingPin": "置頂聊天",
  "chatSettingPinDesc": "將此聊天置頂到列表頂部",
  "chatSettingMute": "消息免打擾",
  "chatSettingMuteDesc": "關閉此聊天的消息通知",
  "chatSettingBackground": "聊天背景",
  "chatSettingBackgroundDefault": "默認背景",
  "chatSettingBackgroundCustom": "已設置自定義背景",
  "chatSettingClearHistory": "清空聊天記錄",
  "chatSettingClearHistoryDesc": "刪除所有消息，此操作不可恢復",
  "chatSettingClearHistoryConfirm": "確定要清空所有聊天記錄嗎？此操作不可恢復。",
  "chatSettingPinnedSuccess": "置頂成功",
  "chatSettingUnpinnedSuccess": "取消置頂",
  "chatSettingMuted": "已開啟免打擾",
  "chatSettingUnmuted": "已關閉免打擾",
  "chatSettingBackgroundSuccess": "背景設置成功",
  "chatSettingClearedSuccess": "清空成功",
  "chatSettingBackgroundSelectorTip": "背景選擇功能開發中",
  "busyTryAgainLater": "對方正忙，請稍后重試",
  "calling": "正在通話",
  "pleaseSelect": "請選擇",
  "multiSelect": "多選",
  "forwardTo": "轉發給",
  "recentForwards": "最近轉發",
  "recentChats": "最近聊天",
  "search": "搜索",
  "searchFriendsTips": "通過好友昵稱、備註搜索好友",
  "sendSeparatelyTo": "分別發送給",
  "sendTo": "發送給",
  "album": "照片",
  "camera": "拍攝",
  "location": "位置",
  "failedGetMapTryAgain": "獲取地圖失敗,請重試",
  "messageCall": "發訊息",
  "video": "視頻",
  "audio": "音頻",
  "videoCall": "視頻通話",
  "voiceCall": "語音通話",
  "favorites": "收藏",
  "myFavorites": "我的收藏",
  "file": "檔案",
  "voiceInput": "語音輸入",
  "coupon": "卡券",
  "selectFriends": "選擇朋友",
  "pleaseSelectMembersForAdd": "請選擇要添加的成員",
  "voiceInputNotImplemented": "語音輸入功能暫無實現",
  "addFriend": "添加朋友",
  "myAccount": "我的帳號",
  "nearbyPeopleTips": "和附近的人交換聯系方式，結交新朋友",
  "enterSameGroup": "與身邊的朋友進入同一個群聊",
  "scan": "掃一掃",
  "scanQrCode": "掃描二維碼",
  "qrCodeBusinessCard": "二維碼名片",
  "scanQrCodeBusinessCard": "掃描二維碼名片",
  "sourceQrcode": "通過掃一掃添加",
  "scanQrcodeAddFriend": "掃一掃上面的二維碼圖案，加我為朋友",
  "groupQrcodeTips": "該二維碼%s天內（%s前）有效，重新進入將更新",
  "share": "分享",
  "newlyRegisteredPeople": "新註冊的人",
  "peopleNearby": "附近的人",
  "allowedBeSearched": "最近新註壘的並且允許被搜索到的朋友",
  "sent": "已發送",
  "networkFailureTryAgain": "網絡故障，請重試！",
  "iAm": "我是",
  "applyAddFriend": "申請添加朋友",
  "sendFriendRequest": "發送添加朋友申請",
  "remark": "備註",
  "moment": "朋友圈",
  "chatMomentSportDataEtc": "聊天、朋友圈、運動數據等",
  "justChat": "僅聊天",
  "momentStatus": "朋友圈和狀態",
  "notLetHimSee": "不讓他（她）看",
  "notSeeHim": "不看他（她）",
  "findNearbyPeople": "找附近的人",
  "newFriend": "新的朋友",
  "noContacts": "無聯繫人",
  "profileSettings": "資料設置",
  "tags": "標籤",
  "remarksTags": "備註和標籤",
  "friendPermissions": "朋友權限",
  "recommendToFriend": "把他推薦給朋友",
  "denylist": "黑名單",
  "addToDenylist": "加入黑名單",
  "deleteContact": "刪除聯繫人",
  "noNewFriends": "沒有新的好友",
  "awaitingVerification": "等待驗證",
  "accept": "接受",
  "added": "已添加",
  "expired": "已過期",
  "failedGetLatLong": "無法獲取經緯度",
  "notTurnedLocationService": "您還沒有打開位置信息服務",
  "or": "或者",
  "notAuthorizedLatLong": "您還沒有授權獲取經緯度",
  "displayProfile": "顯示你的資料",
  "makeYourselfVisible": "讓自己可見",
  "makeYourselfInvisible": "讓自己不可見",
  "noMoreData": "沒有更多數據了",
  "initiateChat": "發起群聊",
  "myQrcode": "我的二維碼",
  "viewAllGroupMember": "查看全部群成員",
  "clearChatRecord": "清空聊天記錄",
  "sureDeleteGroupChatRecord": "確定刪除群的聊天記錄嗎？",
  "selectContacts": "選擇聯繫人",
  "selectGroup": "選擇群聊",
  "createGroupF2f": "面對面建群",
  "createGroupF2fTips": "和身边的朋友輸入相同的四個數字，進入同一個群聊",
  "createGroupF2fConfirmTips": "這些朋友也將進入群聊",
  "selectAGroup": "選擇一個群",
  "removeMember": "移出成員",
  "groupChat": "群聊",
  "groupName": "群聊名稱",
  "groupQrcode": "群二維碼",
  "groupManagement": "群管理",
  "groupLeave": "退出群聊",
  "groupDissolve": "解散群聊",
  "groupJoin": "加入群聊",
  "groupAlias": "我在本群的昵稱",
  "groupAddLocal": "保存到通訊錄",
  "groupSearchTips": "群名稱和群簡介",
  "chatMessage": "聊天訊息",
  "liveBroadcast": "直播",
  "feedbackDetails": "反饋建議明細",
  "submittedAt": "提交於",
  "status": "狀態",
  "viewAttachments": "瀏覽附件",
  "noReply": "暫無回復",
  "repliedAt": "回復於",
  "networkExceptionPlaseNeedNetworkToViewData": "網絡狀態異常，需要打開網絡才能夠查看數據",
  "deviceList": "設備列表",
  "storageSpaceData": "存儲空間和數據",
  "tellFriend": "告訴朋友",
  "accountSecurity": "帳號安全",
  "updateLog": "更新日誌",
  "messageNotification": "消息通知",
  "storageSpace": "存儲空間",
  "helpDocument": "幫助文檔",
  "about": "關於",
  "waitingPeerAccept": "等待對方接受邀請...",
  "peerNoResponse": "對方無應答...",
  "ringing": "已響鈴...",
  "sending": "正在發送...",
  "voiceMessage": "語音消息",
  "addTag": "添加標籤",
  "editTag": "編輯標籤",
  "acceptFriendRequest": "通過朋友驗證",
  "addPhoneContact": "添加手機聯繫人",
  "noConversationMessages": "無會話消息",
  "notShow": "不顯示",
  "sureToLeaveGroup": "確定要退出本群嗎？",
  "sureToDissolveGroup": "確定要解散本群嗎？",
  "sureDeleteData": "確認刪除嗎？刪除後不可恢復。",
  "zhCn": "簡體中文",
  "zhTw": "繁體中文",
  "ruRu": "俄羅斯俄語",
  "enGb": "英國英語",
  "enUs": "美國英語",
  "frFr": "法語（法國）",
  "deDd": "德語（德國）",
  "jaJp": "日語（日本）",
  "koKr": "韓語（韓國）",
  "arSa": "阿拉伯語（沙烏地阿拉伯）",
  "itIt": "意大利語（意大利）",
  "myLive": "我的直播",
  "version": "版本",
  "nowNewVersion": "未檢測到新版本",
  "checkForUpdates": "檢查更新",
  "switchAccount": "切換帳號",
  "logOut": "退出登錄",
  "usedSpace": "已使用空間",
  "deviceUsedSpace": "設備已使用空間",
  "deviceAvailableSpace": "設備可用空間",
  "cache": "快取",
  "userData": "用戶數據",
  "appSize": "應用大小",
  "cacheTips": "快取是在使用APP過程中產生的臨時數據，清理快取不會影響你的正常使用。",
  "userDataTips": "包含APP運行時必要的檔案，以及聊天訊息、好友關係等所有記錄數據。",
  "appSizeTips": "包含APP運行的必要檔案，包括 APK 檔案、優化的編譯器輸出和解壓的原生庫。",
  "goClean": "前往清理",
  "clean": "清理",
  "chatHistory": "聊天記錄",
  "manage": "管理",
  "forwardToFriend": "轉發給朋友",
  "details": "詳情",
  "from": "來自",
  "fileSize": "檔案大小",
  "favoriteGroupTagsEtc": "收藏人名、群名、標籤等",
  "recentlyUsed": "最近使用",
  "text": "文本",
  "image": "圖片",
  "locationMessage": "位置消息",
  "voice": "語音",
  "type": "類型",
  "deviceDetails": "設備詳情",
  "deviceName": "設備名稱",
  "deviceType": "設備類型",
  "lastActiveTime": "最近活躍時間",
  "lastActiveTips": "當設備處於安全狀態時，會自動延長登錄時間以保持朋友消息的及時收發，此時會更新最近活躍時間。",
  "deleteThisDevice": "刪除該設備",
  "deleteThisDeviceTips": "刪除後，下次在該設備登錄時需要進行安全驗證。",
  "loginDeviceManagement": "登錄設備管理",
  "loginDeviceManagementTips": "您的帳號曾在以下設備中登入過，您可以刪除設備，刪除後在該設備登入時需進行安全驗證。",
  "edit": "編輯",
  "currentDevice": "當前設備",
  "online": "在線",
  "offline": "離線",
  "moreInfo": "更多資訊",
  "myAddress": "我的地址",
  "loginEmail": "登入郵箱",
  "personalInformation": "個人資訊",
  "chooseFromAlbum": "從相簿選擇",
  "male": "男",
  "female": "女",
  "gender": "性別",
  "keepSecret": "保密",
  "signature": "個性簽名",
  "notFilled": "未填寫",
  "notBound": "未綁定",
  "notSet": "未設定",
  "haveSet": "已設定",
  "scanResult": "掃描結果",
  "userNotExist": "用戶不存在",
  "userDisabledOrDeleted": "用戶被禁用或已刪除",
  "addToContacts": "添加到通訊錄",
  "addedToDenylistTips": "已添加至黑名單，你將不再收到對方的訊息",
  "otherParty": "對方",
  "socialProfile": "社交資料",
  "mutualGroupsWithHer": "我和他的共同群聊",
  "source": "來源",
  "continueDownloading": "繼續下載",
  "waitingDownload": "等待下載",
  "pauseDownloading": "暫停下載",
  "installNow": "立即安裝",
  "newVersionDetected": "檢測到新版本",
  "updateNow": "立即更新",
  "remindMeLater": "下次再說",
  "noUpdateDescription": "無更新說明",
  "packageSize": "包大小",
  "stillNeeded": "還需",
  "downloaded": "已下載",
  "speed": "速度",
  "play": "播放",
  "saveQrCode": "保存二維碼",
  "deleteTagTips": "刪除標籤後，標籤中的聯繫人不會被刪除",
  "removeContactFromTag": "從標籤中移除聯繫人",
  "noMembersInCurrentTag": "當前標籤無成員",
  "changeParam": "修改%s",
  "contactTags": "聯繫人標籤",
  "needSubmitEffect": "需要確認提交，該操作才生效",
  "alreadyEntered": "你已經輸入過了",
  "allTags": "全部標籤",
  "selectOrEnterTag": "選擇或輸入標籤",
  "unknownMessage": "未知訊息",
  "awaitingReply": "待回覆",
  "replied": "已回覆",
  "completed": "已完结",
  "enable": "啟用",
  "disable": "禁用",
  "unknown": "未知",
  "permissionAcquisitionFailed": "權限獲取失敗",
  "optionsYes": "是的!",
  "optionsNo": "不",
  "optionsRename": "我想重命名",
  "setting": "設置",
  "languageSetting": "語言設定",
  "iosAppIdUnknown": "AppStore未上架或AppID[%s]不存在",
  "enterTheGroup": "進入該群",
  "securityCenter": "安全中心",
  "logoutAccount": "注銷帳號",
  "switchEnvironment": "切換環境",
  "name": "名稱",
  "unnamed": "未命名",
  "groupAnnouncement": "群公告",
  "searchChatContent": "查找聊天內容",
  "pinChat": "置頂聊天",
  "changeGroupChatName": "修改群聊名稱後，將在群內通知其他成員。",
  "nicknameChangeVisibility": "昵稱修改後，只會在此群內顯示，群內成員都可以看見。",
  "groupRemarkVisibility": "群聊的備註僅自己可見",
  "aboutApp": "關於應用",
  "buttonOk": "確定",
  "hintEditGroupAnnouncement": "編輯群公告",
  "lastSeenHide": "隱藏在線狀態",
  "lastSeenNever": "從未上線",
  "lastSeenJustNow": "剛剛上線",
  "lastSeenLongTimeAgo": "很久以前上線",
  "yesterday": "昨天",
  "noBarcodeFound": "未找到條形碼！",
  "barcodeFound": "找到條形碼！",
  "allSenders": "所有發送者",
  "allTime": "所有時間",
  "allTypes": "所有類型",
  "businessCard": "名片",
  "clearAll": "清除全部",
  "messageContent": "訊息內容",
  "messageRevoked": "訊息已撤回",
  "messageType": "訊息類型",
  "groupMembers": "群成員",
  "info": "資訊",
  "personalInfoDesc": "個人資訊描述",
  "personalInfoTip": "個人資訊提示",
  "resetFilters": "重置篩選",
  "quickFilters": "快速篩選",
  "sender": "發送者",
  "sentByMe": "我發送的",
  "sentByOthers": "他人發送的",
  "storagePermissionNotObtained": "未獲取存儲權限",
  "textMessage": "文本訊息",
  "today": "今天",
  "thisMonth": "本月",
  "thisWeek": "本週",
  "timeRange": "時間範圍",
  "searchError": "搜尋錯誤",
  "searchFilterAll": "全部篩選",
  "searchFilterImage": "圖片篩選",
  "searchFilterText": "文本篩選",
  "searchFilterToday": "今日篩選",
  "searchFilters": "搜尋篩選",
  "searchHistory": "搜尋歷史",
  "searchMessagesHint": "搜尋訊息提示",
  "searchNoResults": "無搜尋結果",
  "searchResults": "搜尋結果",
  "searchSuggestions": "搜尋建議",
  "signatureInputHint": "簽名輸入提示",
  "signaturePlaceholder": "簽名占位符",
  "signatureTips": "簽名提示",
  "loadMore": "加載更多",
  "earlier": "更早",
  "alreadyMember": "已成員",
  "offlineNotification": "下線通知",
  "forceLogoutNotification": "您已被設備【%s】強制下線",
  "timeJustNow": "剛剛",
  "timeMinutesAgo": "%s分鐘前",
  "timeHoursAgo": "%s小時前",
  "timeDaysAgo": "%s天前",
  "timeYesterday": "昨天",
  "timeToday": "今天",
  "timeWeekdays": "星期一,星期二,星期三,星期四,星期五,星期六,星期日"
}
