...
        if (widget.type == ClickType.select) {
          setState(() => isSelect = !isSelect);
          if (isSelect) widget.add(widget.identifier);
          if (!isSelect) widget.cancel(widget.identifier);
          return;
        }
        if (widget.title == '新的朋友') {
          Get.to(NewFriendPage());
        } else if (widget.title == '群聊') {
          Get.to(GroupListPage());
          // } else if (widget.title == '标签') {
          //   Get.to(AllLabelPage());
          // } else if (widget.title == '公众号') {
...
