...
  "faceToFaceLogic": "faceToFaceLogic",
  "failedGetLatLong": "无法获取经纬度",
  "failedGetMapTryAgain": "获取地图失败,请重试",
  "failedRequestPleaseCheckNetwork": "发起请求失败，请检查网络连接，或稍后重试",
  "favoriteGroupTagsEtc": "收藏人名、群名、标签等",
  "favorites": "收藏",
  "feedback": "反馈建议",
  "feedbackBuilder": "feedbackBuilder",
  "feedbackContentRequired": "反馈内容不能为空",
  "feedbackDetails": "反馈建议明细",
  "feedbackModel": "feedbackModel",
  "feedbackReplyModel": "feedbackReplyModel",
  "feedbackSuccessMsg": "你的反馈问题我们已经收到了，会尽快处理！",
...
  "revoke": "撤回",
  "ringing": "已响铃...",
  "ruRu": "俄罗斯俄语",
  "saveQrCode": "保存二维码",
  "saveSuccess": "保存成功",
  "scan": "扫一扫",
  "scanQrCode": "扫描二维码",
  "scanQrCodeBusinessCard": "扫描二维码名片",
  "scanQrcodeAddFriend": "扫一扫上面的二维码图案，加我为朋友",
  "scanResult": "扫描结果",
  "scannerResult": "scannerResult",
  "search": "搜索",
  "searchChatContent": "查找聊天内容",
...
